--- a/login.html
+++ b/login.html
@@ -1,4 +1,5 @@
- <!-- Main Stylesheet -->
+ <!-- 
+
  <link rel="stylesheet" href="css/login.css">]
  <link rel="stylesheet" href="css/main.css">
  <link rel="stylesheet" href="js/login.js">
@@ -31,3 +32,36 @@
   </div>
 </div>
 </div>
+  -->
+  <link rel="stylesheet" href="css/login.css">]
+
+  <link rel="stylesheet" href="js/login.js">
+ 
+ <div class="login-page">
+
+    
+     <img src="images/mine/login1.jpg" class="centered"  class="center" style=" width:1000px;height:900px;"> 
+     </div>
+
+
+     <div class="centered">
+     <div class="form">
+       <form class="register-form">
+         
+         <input type="text" placeholder="name"/>
+         <input type="password" placeholder="password"/>
+         <input type="text" placeholder="email address"/>
+         <button>create</button>
+         <p class="message">Already registered? <a href="#">Sign In</a></p>
+       </form>
+       <h1>Kodii</h1> 
+       <form class="login-form">
+         <input type="text" placeholder="username"/>
+         <input type="password" placeholder="password"/>
+         <button>login</button>
+         <p class="message">Not registered? <a href="#">Create an account</a></p>
+       </form>
+     </div>
+   </div>
+ 
+ 
